<resources>
    <string name="app_name">MantenedorDeNotas</string>
    <string name="add_evaluation">Agregar Evaluación</string>
    <string name="add_course">Agregar Curso</string>
    <string name="add_student">Agregar Estudiante</string>
    <string name="back_icon">◀</string>
    <string name="close_icon">×</string>
    <string name="title_title">Titulo</string>
    <string name="save_text">Guardar</string>
    <string name="info_title">Agregar titulo</string>
    <string name="title_home">Inicio</string>
    <string name="course_list">Listado de Cursos</string>
    <string name="content_description_void" />
    <string name="next_icon">▶</string>
    <string name="id_void">-ID-</string>
    <string name="title_course_select">Seleccione Curso</string>
    <string name="label_fullname">Nombre Completo</string>
    <string name="label_natural_key">RUT</string>
</resources>
