<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dcv.claudio.mantenedordenotas.AddCourseActivity">

    <Button
        android:labelFor="@id/btnCloseAddCourse"
        android:id="@+id/btnCloseAddCourse"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:onClick="closeAddCourse"
        android:text="@string/close_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_course"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/courseTitleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/title_title"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/btnCloseAddCourse" />

    <Button
        android:onClick="createCourse"
        android:id="@+id/btnSaveCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_text"
        app:layout_constraintStart_toStartOf="@+id/txtCourseTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtCourseTitle" />

    <EditText
        android:id="@+id/txtCourseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_void"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/courseTitleTitle"
        android:text="@string/content_description_void"
        app:layout_constraintStart_toStartOf="@+id/courseTitleTitle"
        app:layout_constraintTop_toBottomOf="@+id/courseTitleTitle"
        tools:text="@string/content_description_void" />
</android.support.constraint.ConstraintLayout>
