<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dcv.claudio.mantenedordenotas.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:onClick="openAddCourse"
        android:id="@+id/buttonOpenAddCourse"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_course"
        app:layout_constraintEnd_toEndOf="@+id/buttonOpenAddEvaluation"
        app:layout_constraintStart_toStartOf="@+id/buttonOpenAddEvaluation"
        app:layout_constraintTop_toBottomOf="@+id/buttonOpenAddEvaluation" />

    <Button

        android:onClick="openAddEvaluation"
        android:id="@+id/buttonOpenAddEvaluation"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/add_evaluation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonOpenAddStudent"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:onClick="openAddStudent"
        android:text="@string/add_student"
        app:layout_constraintEnd_toEndOf="@+id/buttonOpenAddCourse"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonOpenAddCourse"
        app:layout_constraintTop_toBottomOf="@+id/buttonOpenAddCourse" />

</android.support.constraint.ConstraintLayout>
